<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Manga World</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="the_logo">The logo</string>
    <string name="select_source">Select Source</string>
    <string name="book_cover">Book Cover</string>
    <string name="book_cover_background">Book cover background</string>
    <string name="action_close">Close</string>
    <string name="cancel_current_progress">cancel current progress</string>
    <string name="go_to_the_previous_chapter">Go to the previous chapter</string>
    <string name="go_to_the_next_chapter">Go to the next chapter</string>
    <string name="add_to_favorite_books">Add to favorite books</string>
    <string name="action_select_category">Select category</string>
    <string name="close">Close</string>
    <string name="show_chapters">Show Chapters</string>
    <string name="hide_chapters">Hide Chapters</string>
    <string name="book_name">Book name</string>
    <string name="category_">Category:</string>
    <string name="chapter">Chapter</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="favorite_item_cover">Favorite Item Cover</string>
    <string name="book_title">Book Title</string>
    <string name="last_chapter">Last</string>
    <string name="menu_button">Menu button</string>
    <string name="theme">Theme</string>
    <string name="more">More</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_favorite">Remove Favorite</string>
    <string name="favorite_icon">Favorite icon</string>
    <string name="show_info">Info</string>
    <string name="first_chapter">First</string>
    <string name="value">Value</string>
    <string name="last_viewed_">Last viewed:</string>
    <string name="swipe_mode">Swipe Mode</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="download">Download</string>
    <string name="refresh">Refresh</string>
    <string name="loading">LOADING</string>
    <string name="load_next_chapter_completed">Next chapter is ready</string>
    <string name="perparing_next_chapter">Perparing next chapter...</string>
    <string name="go_to_newest_chapter">Go to newest chapter</string>
    <string name="go_to_oldest_chapter">Go to oldest chapter</string>

</resources>
