<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ndphu.app.android.cw.MainActivity" >

    <item
        android:id="@+id/action_select_category"
        android:icon="@drawable/ic_action_dropdown"
        android:title="@string/action_select_category"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_close"
        android:icon="@drawable/ic_action_close"
        android:title="@string/close"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:visible="false"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

</menu>