<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="4dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/listview_selectable_background"
        android:orientation="vertical"
        android:padding="4dp" >

        <ImageView
            android:id="@+id/listview_item_book_cover"
            android:layout_width="72dp"
            android:layout_height="96dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/favorite_item_cover"
            android:scaleType="centerCrop" />

        <ImageView
            android:id="@+id/listview_item_book_menu_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:contentDescription="@string/menu_button"
            android:focusable="false"
            android:padding="4dp"
            android:src="@drawable/ic_3dot_menu_light" />

        <ProgressBar
            android:id="@+id/listview_item_book_menu_loading_indicator"
            style="?android:attr/progressBarStyleInverse"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_toEndOf="@+id/listview_item_book_cover"
            android:layout_toRightOf="@+id/listview_item_book_cover"
            android:visibility="gone" />

        <TextView
            android:id="@+id/listview_item_book_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/listview_item_book_cover"
            android:layout_toLeftOf="@+id/listview_item_book_menu_button"
            android:layout_toRightOf="@+id/listview_item_book_cover"
            android:layout_toStartOf="@+id/listview_item_book_menu_button"
            android:maxLines="3"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="2dp"
            android:text="@string/book_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/listview_item_book_button_lastchapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:focusable="false"
            android:text="@string/last_chapter"
            android:textSize="14sp" />
    </RelativeLayout>

</android.support.v7.widget.CardView>