<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4dp" >

        <android.support.v7.widget.CardView
            style="@style/settings_item_cardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/settings_item_header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/swipe_mode" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/colorPrimary" >
                </LinearLayout>

                <RadioGroup
                    android:id="@+id/fragment_settings_radiogroup_swipemode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:padding="4dp" >

                    <RadioButton
                        android:id="@+id/fragment_settings_radiobutton_swipemode_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/vertical" />

                    <RadioButton
                        android:id="@+id/fragment_settings_radiobutton_swipemode_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/horizontal" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/settings_item_cardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/settings_item_header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Preload Next Chapter" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/colorPrimary" >
                </LinearLayout>

                <Switch
                    android:id="@+id/fragment_settings_switch_preload_next_chapter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:padding="4dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/settings_item_cardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/settings_item_header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Cache Pages" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/colorPrimary" >
                </LinearLayout>

                <Switch
                    android:id="@+id/fragment_settings_switch_enable_cache_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:padding="4dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/settings_item_cardview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/settings_item_header"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Volumn Key Navigation" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@color/colorPrimary" >
                </LinearLayout>

                <Switch
                    android:id="@+id/fragment_settings_switch_enable_volumn_key"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="4dp"
                    android:padding="4dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>